Style fixes, overflow-x fix, highlighting of active link in the hamburger menu

--- a/portfolio-site/src/pages/styles/about.scss
+++ b/portfolio-site/src/pages/styles/about.scss
@@ -13,7 +13,7 @@
 
 .about-container {
   position: absolute;
-  top: 10%;
+  top: 15%;
   left: 0;
   min-height: 100vh;
   display: flex;
@@ -33,13 +33,24 @@
   }
 
   @media only screen and (max-width: 450px), only screen and (max-height: 850px) {
-    padding: 5% 0;
+    padding: 10% 0;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    top: 10%;
   }
 }
 
 .about-title {
   font-size: 36px;
   font-weight: 600;
+  width: 85%;
+  @media only screen and (min-width: 1024px) {
+    width: 75%;
+  }
+  @media only screen and (min-width: 1440px) {
+    max-width: 50%;
+  }
 }
 
 .about-info {
