--- a/portfolio-site/src/pages/styles/main.scss
+++ b/portfolio-site/src/pages/styles/main.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: absolute;
   display: block;
+  overflow-x: hidden !important;
 }
 
 .menu-container {
