--- a/portfolio-site/src/pages/styles/projects.scss
+++ b/portfolio-site/src/pages/styles/projects.scss
@@ -4,7 +4,7 @@
 
 .projects-container {
   position: absolute;
-  top: 10%;
+  top: 15%;
   left: 0;
   min-height: 100vh;
   width: 100%;
@@ -15,12 +15,25 @@
   color: #FFF;
   padding-bottom: 5%;
 
+  @media only screen and (min-width: 1024px) {
+    top: 10%;
+  }
+
+  h1 {
+    margin-top: 0;
+    text-align: center;
+    width: 85%;
+    @media only screen and (min-width: 1280px) {
+      width: 65vw;
+    }
+  }
+
   @media only screen and (max-height: 850px) {
-    padding: 5% 0;
+    padding: 10% 0;
   }
 
   @media only screen and (max-width: 450px), only screen and (max-height: 850px) {
-    padding: 7% 0;
+    padding: 5% 0;
   }
 
   .project {
